[package]
name = "strongest-oracle"
version = "0.0.1"
edition = "2021"
description = "Single-node TEE re-encryption oracle for the strongest iNFT transfer flow."
license = "MIT"

[[bin]]
name = "strongest-oracle"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["recovery", "rand"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Day 7: enable Phala dstack SDK for TEE attestation when running on confidential VM
# [features]
# tee = ["dep:dstack-sdk"]
